<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/location">

    <fragment
        android:id="@+id/community"
        android:name="cn.edu.hdu.artalk2.ui.home.HomeFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/record"
        android:name="cn.edu.hdu.artalk2.ui.dashboard.DashboardFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/location"
        android:name="cn.edu.hdu.artalk2.ui.notifications.NotificationsFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/channel"
        android:name="cn.edu.hdu.artalk2.ui.notifications.NotificationsFragment"
        android:label="@string/title_channel"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/mine"
        android:name="cn.edu.hdu.artalk2.ui.notifications.NotificationsFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_notifications" />
</navigation>